--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="face">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport">
         <title>My Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Kat's Recipes</h1>
+        <h1 class="center">Kat's Recipes</h1>
+        <div class="links">
         <p>
-            <a href="recipes/stone-soup.html">Stone Soup</a>
+            <a href="pages/stone-soup.html">Stone Soup</a>
         </p>
         <p>
-            <a href="recipes/fried-rice.html">Fried Rice</a>
+            <a href="pages/fried-rice.html">Fried Rice</a>
         </p>
         <p>
-            <a href="recipes/steamed-dumplings.html">Steamed Dumplings</a>
+            <a href="pages/steamed-dumplings.html">Steamed Dumplings</a>
         </p>
+        </div>
     </body>
 <html>
